# sentiment-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/processed/: train.csv
sentiment_analysis/: __init__.py  data_analysis.ipynb  exploratory_data_analysis.ipynb
sentiment_analysis/config/: gpt2.yaml  nanogpt.yaml
sentiment_analysis/data/: exploratory_data_analysis.ipynb  loader.py  process.py
sentiment_analysis/data/processed/: test.csv  train.csv  val.csv
sentiment_analysis/data/raw/: test.csv  train.csv
sentiment_analysis/model/: base.py  config.py  module.py
sentiment_analysis/model/nn/: blocks.py  gpt.py
sentiment_analysis/train/: train_gpt2.py  train_nanogpt.py
sentiment_analysis/utils/: loss.py
