[tool.poetry]
name = "sentiment-analysis-project"
version = "0.1.0"
description = "Sentiment analysis using transformers and attention-based models."
authors = ["Umut DUNDAR <dundar.umut@metu.edu.tr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3.2"
torch = "^2.2.1"
lightning = "^2.2.1"
transformers = "^4.38.2"
wandb = "^0.16.4"
pandas = "^2.2.1"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6.2"
ruff = "^0.3.2"
black = "^24.3.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
