[project]
name = "sentiment-analysis"
description = "Sentiment analysis using transformers and attention-based models."
authors = [{"name" = "Umut DUNDAR", "email" = "dundar.umut@metu.edu.tr"}]
license = "MIT"
dynamic = ["version", "readme"]

requires-python = ">=3.10.0, <3.11.0"

dependencies = [
"hydra-core",
"torch >= 2.2.1",
"lightning >= 2.2.1",
"transformers >= 4.38.2",
"wandb >= 0.16.4",
"pandas >= 2.2.1",
"numpy >= 1.26.4",
"matplotlib >= 3.5.1",
"seaborn >= 0.11.2",
"scipy >= 1.7.3",
"tiktoken >= 0.9.0",
"typer >= 0.4.0",
]


[project.optional-dependencies]
dev = ["pre-commit", "mypy", "setuptools", "wheel", "build"]

[project.scripts]
sentiment_analysis = "sentiment_analysis.__init__:cli"

[tool.setuptools.dynamic]
readme = { file = "README.md" }
version = { attr = "sentiment_analysis.__version__" }

[tool.setuptools.packages.find]
exclude = ["data"]

[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"
